# Cereus

./: .gitignore  .travis.yml  Cargo.toml  README.md  cereus.json
cereus_commands/: Cargo.toml
cereus_commands/src/: lib.rs
cereus_commands/src/commands/: alias.rs  api.rs  cactus.rs  command.rs  manager.rs  mod.rs  multi.rs  offences.rs  quote.rs  social.rs  trust.rs
cereus_core/: Cargo.toml
cereus_core/src/: lib.rs  types.rs
cereus_handlers/: Cargo.toml
cereus_handlers/src/: command.rs  event.rs  lib.rs  logging.rs  spam.rs
src/: api.rs  config.rs  error_builder.rs  lib.rs  main.rs  packet.rs  registry.rs  response_builder.rs  server.rs  types.rs  web.rs
src/cache/: command.rs  mod.rs  quote.rs  user.rs
src/command/: api.rs  cactus.rs  command.rs  manager.rs  mod.rs  multi.rs  quote.rs  trust.rs
src/handler/: command.rs  event.rs  logging.rs  mod.rs  spam.rs
tests/: lib.rs
