[package]
name = "cereus"
version = "0.1.0"
authors = ["Innectic <innectic@gmail.com>"]
edition = "2018"

[dependencies]
cereus_core = { path = "./cereus_core" }
cereus_handlers = { path = "./cereus_handlers" }
cereus_commands = { path = "./cereus_commands" }

iron = "0.6.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"